--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
   />
-    <title>React App</title>
+    <title>Sasti Dukan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
